# rustceptor

./: .gitignore  README.md  flake.nix
backend/: Cargo.toml
backend/src/: capture.rs  dyn_content.rs  main.rs  models.rs  routes.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
frontend/src/: main.rs  models.rs
frontend/src/components/: mod.rs
frontend/src/components/layout/: mod.rs  navbar.rs  route_sidebar.rs
frontend/src/components/panels/: define_panel.rs  inspect_panel.rs  mod.rs  settings_panel.rs
frontend/src/components/shared/: app_button.rs  app_input.rs  app_select.rs  app_textarea.rs  contenttype_selector.rs  method_badge.rs  mod.rs  mode_toggle.rs
frontend/src/components/utils/: mod.rs  toast.rs
frontend/src/pages/: home.rs  login.rs
nix-deploy-example/: configuration.nix  flake.nix
