[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
paste = "1.0"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4"
random-string = "1.1"
systemd-journal-logger = "2.2.2"
log = "0.4"
env_logger = "0.11"