[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3", features = ["console", "EventSource", "EventSourceInit", "MessageEvent"] }
gloo = "0.6"
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lucide-yew = { version = "2.576", features = ["notifications", "development", "account", "files", "time"] }
uuid = {version = "1.21", features = [ "v4", "js" ]}
